# my_ws

./: CMakeLists.txt  README.md  cartpole_env_GUI.cpp  yap_g1_motor_test.cpp
src/mujoco_pkg/: CMakeLists.txt
src/mujoco_pkg/models/: MUJOCO_LOG.TXT  cart_pole.xml  cube.xml  dog.xml
src/mujoco_pkg/src/: CartPole (copy).cpp  CartPole.cpp  CartPole_DQN.cpp  CartPole_DQN_test.cpp  CartPole_DQN_without_GUI.cpp  CartPole_SAC.cpp  CartPole_without_GUI.cpp  DQN_test.cpp  Dog.cpp  NN.cpp  NN.pt  NN_batch.cpp  SAC.yaml  SAC_test.cpp  bipedal_simple.py  box_pushpull.py  buffer.npz  cartpole_SAC.py  cartpole_SAC_copy.py  cartpole_SAC_hlr.py  copyCartPole_DQN.cpp  my_model.pt  net_1.pt  test.cpp  test.py  tutor_LSTM.py  tutor_NN_Batch.py  tutor_RNN.py  tutor_mujoco_check_model.py  tutor_mujoco_noGUI.py  tutor_mujoco_simple.py  tutor_mujoco_simple_copy.py  tutorial_mujoco_1.py  tutorial_mujoco_2.py  tutorial_mujoco_3.py
src/practise_pkg/: CMakeLists.txt  README.md
src/practise_pkg/include/: user_def_lib.hpp
src/practise_pkg/src/: constructor_lib_example.cpp  user_def_lib.cpp
